# rust-edid

./: Cargo.toml
src/: lib.rs
