[package]
name = "edid"
version = "0.4.1"
description = "Parse EDID data structures"
homepage = "https://github.com/emersion/rust-edid"
repository = "https://github.com/emersion/rust-edid"
documentation = "https://docs.rs/edid"
readme = "README.md"
categories = ["parser-implementations"]
license = "MIT"
authors = ["emersion"]
edition = "2021"

[dependencies]
nom = "7.1.3"
